fix navbar spacing

--- a/app/assets/stylesheets/components/featured_movie.css
+++ b/app/assets/stylesheets/components/featured_movie.css
@@ -1,14 +1,14 @@
-
 .featured-movie {
   height: 530px;
   width: 100%;
+  min-width: 1200px;
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   margin-top: -25px;
 }
 
 .title-blurb-container {
-  margin: 90px 80px ;
+  margin: 90px 80px;
   width: 400px;
 }
 
@@ -42,10 +42,11 @@
   align-items: center;
 }
 
-.play-button, .my-list-button {
+.play-button,
+.my-list-button {
   color: white;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
   border-radius: 2px;
 }
