--- a/app/assets/stylesheets/components/navbar.css
+++ b/app/assets/stylesheets/components/navbar.css
@@ -3,41 +3,43 @@
   position: fixed;
   background-position: center;
   width: 100%;
+  min-width: 900px;
   left: 0;
   top: 0;
   padding-right: 10px;
   z-index: 100;
 }
 
-.navbar-left, .navbar-right {
+.navbar-left,
+.navbar-right {
   display: flex;
   align-items: center;
 }
 
 .navbar-left {
-  font-family: 'Ramabhadra', sans-serif;
+  font-family: "Ramabhadra", sans-serif;
+  margin-left: 80px;
 }
 
 .navbar-right {
-    font-size: 14px;
+  font-size: 14px;
+  margin-right: 80px;
 }
 
 .home-navbar {
   display: flex;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: -120px;
-  margin-right: -100px;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 #site-name-small {
-    font-size: 35px;
+  font-size: 35px;
 }
 
 .home-navbar a {
-  color: white
+  color: white;
 }
 
 .navbar-buttons {
@@ -51,7 +53,7 @@
 }
 
 .navbar-buttons li a {
-  color: rgb(177, 177, 177)
+  color: rgb(177, 177, 177);
 }
 
 .navbar-buttons a:active {
@@ -79,7 +81,7 @@
   color: white;
   font-weight: 300;
   padding: 10px 20px;
-  border: .5px solid gray;
+  border: 0.5px solid gray;
   width: 150px;
   right: 45px;
   top: 55px;
@@ -94,7 +96,7 @@
   margin-top: 10px;
 }
 
-.profile-picture-down-arrow:hover~.pop-up-notifications {
+.profile-picture-down-arrow:hover ~ .pop-up-notifications {
   display: block;
 }
 
@@ -104,7 +106,7 @@
 }
 
 #pop-up-logout-btn {
-  border-top: .5px solid gray;
+  border-top: 0.5px solid gray;
   margin-top: 10px;
   padding-top: 10px;
 }
